<resources>
    <string name="add_to_collection">Add to Collection</string>
    <string name="app_name">CIS</string>
    <string name="blank"/>
    <string name="collection_deleted">Collection Deleted</string>
    <string name="confirm_save">Confirm Save your changes?</string>
    <string name="created_label">Created: </string>
    <string name="delete_collection">Delete this collection?</string>
    <string name="delete_collection_message">This action cannot be undone.</string>
    <string name="empty_collections">Your Collection of hymns will appear here</string>
    <string name="empty_collections_add">Create your first Collection</string>
    <string name="error_billing_client_unavailable">Purchases are unavailable at the moment.\nPlease check back later.</string>
    <string name="error_empty_collection">Add hymns to Collection</string>
    <string name="error_required">Required</string>
    <string name="error_invalid_content">Invalid content</string>
    <string name="error_invalid_number">Hymn %1$d is unavailable</string>
    <string name="error_item_already_owned">You have already purchased this item.\nPlease select a different amount.</string>
    <string name="error_un_available">Unavailable</string>
    <string name="full_screen">Fullscreen</string>
    <string name="hint_description">Description (Optional)</string>
    <string name="hint_search_hymns">Search Title, Number, Content…</string>
    <string name="hint_title">Title</string>
    <string name="hymn_count_one">One Hymn</string>
    <string name="hymn_count_other">%1$d Hymns</string>
    <string name="hymn_count_zero">No Hymns</string>
    <string name="hymn_deleted">Hymn Deleted</string>
    <string name="in_app_purchases_disclaimer">A One-time Donation (In-App Purchase) or a Monthly Donation (Subscription) is not required to access any feature of this app, All features are available for free and will always be. The subscription renews automatically each month. You can cancel your subscription at any time through your Google Play Store account settings and your subscription will stay active until the end of your subscription period. Subscriptions must be cancelled at least 24 hours before the end of the subscription period to avoid being charged for another month.</string>
    <string name="manage_subscriptions">Manage Subscriptions</string>
    <string name="monthly_donations">Monthly Donations</string>
    <string name="new_collection">New Collection</string>
    <string name="one_tine_donation">One-time Donation</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="send_with">Send with:</string>
    <string name="share_this_app">Share this app…</string>
    <string name="subscription_period">%1$s/month</string>
    <string name="success_purchase">Thank you for your contribution!</string>
    <string name="support_headline">Support us with a Donation!</string>
    <string name="support_message">If you find this app useful please consider supporting us with a donation.</string>
    <string name="support_or_feedback">Help or Feedback</string>
    <string name="switch_between_hymnals">Switch Between Hymnals</string>
    <string name="switch_between_help">When you are online all hymnals will be shown, including those available for download.\n\nWhen you are offline only downloaded hymnals will be shown.</string>
    <string name="switch_between_hymnals_message">Tap here to see a list of all available hymnals</string>
    <string name="switch_hymnal">Switch Hymnal</string>
    <string name="terms_of_use"><u>Terms of Use</u></string>
    <string name="text_size">Text Size</string>
    <string name="theme">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_follow_system">Follow System</string>
    <string name="title_delete">Delete</string>
    <string name="title_edit_hymn">Edit Hymn</string>
    <string name="title_hymnals">Hymnals</string>
    <string name="title_collection">Collection</string>
    <string name="title_collections">Collections</string>
    <string name="title_help">Help</string>
    <string name="title_hymns">Hymns</string>
    <string name="title_info">Info</string>
    <string name="title_save">Save</string>
    <string name="title_search">Search</string>
    <string name="title_sing">Sing</string>
    <string name="title_support">Support</string>
    <string name="title_text_format">Text Format</string>
    <string name="title_undo">Undo</string>
    <string name="title_new">New</string>
    <string name="tune">Tune</string>
    <string name="typeface">Typeface</string>
    <string name="undo_changes">Undo Changes</string>
    <string name="undo_changes_confirm">Undo all your changes and reset to the original content?</string>
    <string name="view_source_code">View source code</string>
    <string name="tap_to_change">Tap to change</string>
    <string name="tap_to_close">Tap to close</string>
    <string name="sort_language">Language</string>
    <string name="sort_title">Title</string>
    <string name="sort_offline">Downloaded</string>
    <string name="ordered_by">Ordered by %1$s</string>
</resources>