<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:paddingHorizontal="@dimen/spacing_medium"
    android:paddingVertical="@dimen/spacing_large"
    android:scrollbarStyle="outsideOverlay"
    android:scrollbars="vertical"
    tools:context=".ui.support.SupportFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/support_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/blank"
            android:src="@drawable/ic_undraw_air_support" />

        <TextView
            android:id="@+id/text_support_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/support_headline"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/support_message"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceBody1" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>