<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="?attr/selectableItemBackground"
    android:orientation="vertical"
    android:padding="@dimen/spacing_medium">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/sortIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/blank"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_sort" />

        <TextView
            android:id="@+id/sortLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintBottom_toTopOf="@id/sortHint"
            app:layout_constraintEnd_toStartOf="@id/sortChevIcon"
            app:layout_constraintStart_toEndOf="@id/sortIcon"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Ordered by Hymnal Title" />

        <TextView
            android:id="@+id/sortHint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_micro"
            android:text="@string/tap_to_change"
            android:textAppearance="?attr/textAppearanceCaption"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/sortChevIcon"
            app:layout_constraintStart_toEndOf="@id/sortIcon"
            app:layout_constraintTop_toBottomOf="@id/sortLabel" />

        <ImageView
            android:id="@+id/sortChevIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/blank"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_expand_more" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/sortGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:visibility="gone"
        app:checkedChip="@id/chipSortTitle"
        app:selectionRequired="true"
        app:singleSelection="true"
        tools:visibility="visible">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSortTitle"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_title" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSortLanguage"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_language" />

    </com.google.android.material.chip.ChipGroup>

</LinearLayout>